src/project/snapshots/pixi__project__manifest__test__invalid_target_specific.snap
---
source: src/project/manifest.rs
assertion_line: 216
expression: "examples.into_iter().map(|example|\n                toml_edit::de::from_str::<ProjectManifest>(&format!(\"{PROJECT_BOILERPLATE}\\n{example}\")).unwrap_err().to_string()).collect::<Vec<_>>().join(\"\\n\")"
---
TOML parse error at line 8, column 9
  |
8 | [target.foobar.dependencies]
  |         ^^^^^^
data did not match any variant of untagged enum TargetSelector

