src/project/snapshots/pixi__project__manifest__test__mapped_dependencies.snap
---
source: src/project/manifest.rs
expression: "toml_edit::de::from_str::<ProjectManifest>(&contents).expect(\"parsing should succeed!\")"
---
ProjectManifest {
    project: ProjectMetadata {
        name: "foo",
        version: Some(
            Version {
                version: [[0], [0], [1], [0]],
                local: [],
            },
        ),
        description: None,
        authors: [],
        channels: [],
        platforms: PixiSpanned {
            span: Some(
                121..123,
            ),
            value: [],
        },
        license: None,
        license_file: None,
        readme: None,
        homepage: None,
        repository: None,
        documentation: None,
    },
    tasks: {},
    system_requirements: SystemRequirements {
        windows: None,
        unix: None,
        macos: None,
        linux: None,
        cuda: None,
        libc: None,
        archspec: None,
    },
    dependencies: {
        "test_map": NamelessMatchSpec {
            version: Some(
                Range(
                    GreaterEquals,
                    Version {
                        version: [[0], [1], [2], [3]],
                        local: [],
                    },
                ),
            ),
            build: Some(
                Exact(
                    "py34_0",
                ),
            ),
            build_number: None,
            file_name: None,
            channel: Some(
                Channel {
                    platforms: None,
                    base_url: Url {
                        scheme: "https",
                        cannot_be_a_base: false,
                        username: "",
                        password: None,
                        host: Some(
                            Domain(
                                "conda.anaconda.org",
                            ),
                        ),
                        port: None,
                        path: "/conda-forge/",
                        query: None,
                        fragment: None,
                    },
                    name: Some(
                        "conda-forge",
                    ),
                },
            ),
            subdir: None,
            namespace: None,
            md5: None,
            sha256: None,
        },
    },
    host_dependencies: None,
    build_dependencies: None,
    target: {},
    activation: None,
    pypi_dependencies: None,
}
