src/project/snapshots/pixi__project__manifest__test__target_specific.snap
---
source: src/project/manifest.rs
expression: "toml_edit::de::from_str::<ProjectManifest>(&contents).expect(\"parsing should succeed!\")"
---
ProjectManifest {
    project: ProjectMetadata {
        name: "foo",
        version: Version {
            version: [[0], [0], [1], [0]],
            local: [],
        },
        description: None,
        authors: [],
        channels: [],
        platforms: PixiSpanned {
            span: Some(
                117..119,
            ),
            value: [],
        },
    },
    tasks: {},
    system_requirements: SystemRequirements {
        windows: None,
        unix: None,
        macos: None,
        linux: None,
        cuda: None,
        libc: None,
        archspec: None,
    },
    dependencies: {},
    host_dependencies: None,
    build_dependencies: None,
    target: {
        PixiSpanned {
            span: Some(
                146..152,
            ),
            value: Platform(
                Win64,
            ),
        }: TargetMetadata {
            dependencies: {
                "foo": NamelessMatchSpec {
                    version: Some(
                        Operator(
                            Equals,
                            Version {
                                version: [[0], [3], [4], [5]],
                                local: [],
                            },
                        ),
                    ),
                    build: None,
                    build_number: None,
                    file_name: None,
                    channel: None,
                    subdir: None,
                    namespace: None,
                    md5: None,
                    sha256: None,
                },
            },
            host_dependencies: None,
            build_dependencies: None,
        },
        PixiSpanned {
            span: Some(
                206..212,
            ),
            value: Platform(
                Osx64,
            ),
        }: TargetMetadata {
            dependencies: {
                "foo": NamelessMatchSpec {
                    version: Some(
                        Operator(
                            Equals,
                            Version {
                                version: [[0], [1], [2], [3]],
                                local: [],
                            },
                        ),
                    ),
                    build: None,
                    build_number: None,
                    file_name: None,
                    channel: None,
                    subdir: None,
                    namespace: None,
                    md5: None,
                    sha256: None,
                },
            },
            host_dependencies: None,
            build_dependencies: None,
        },
    },
}
